style.css
/* ... */
@media (max-width: 1199px) and (min-width: 769px) {

    .info-box-left,
    .info-box-bottom {
        right: auto;
        left: 50%;
        top: 100%;
        margin-right: 0;
        margin-top: 20px;
        transform: translate(-50%, 20px);
        min-height: 170px;
    }

    .info-box-left.show,
    .info-box-bottom.show {
        transform: translate(-50%, 0);
    }

    .info-box-left.hide,
    .info-box-bottom.hide {
        transform: translate(-50%, 20px);
    }
}

@media (max-width: 768px) {
    :root {
        --wrapper-width: 80px;
        --wrapper-height: 120px;
        --image-width: 80px;
        --gallery-gap: 10px;
        --label-font-size-ko: 18px;
        --label-font-size-en: 12px;
        --label-margin-bottom: 12px;
        --info-box-width: 260px;
    }

    .info-box-left,
    .info-box-bottom {
        position: fixed;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        right: auto;
        margin-right: 0;
    }

    .info-box-left.show,
    .info-box-bottom.show {
        transform: translate(-50%, -36%);
    }

    .info-box-left.hide,
    .info-box-bottom.hide {
        transform: translate(-50%, -40%);
    }

    .info-box-content {
        font-size: 15px;
    }

    .info-details-list {
        font-size: 12px;
    }
}

@media (max-height: 780px) {

    .info-box-left,
    .info-box-bottom {
        position: fixed;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        right: auto;
        margin-right: 0;
        margin-top: 0;
    }

    .info-box-left.show,
    .info-box-bottom.show {
        transform: translate(-50%, -36%);
    }

    .info-box-left.hide,
    .info-box-bottom.hide {
        transform: translate(-50%, -40%);
    }
}

@media (max-width: 768px),
(max-height: 780px) {

    .gallery-item-wrapper:has(.info-box-bottom.show) .label-container.show,
    .gallery-item-wrapper:has(.info-box-left.show) .label-container.show {
        position: fixed;
        left: 50%;
        transform: translate(-50%, 0);
        top: auto;
        z-index: 110;
        margin-bottom: 0;
    }

    .gallery-item-wrapper:has(#img-fold-1-info-box.show) .label-container.show {
        bottom: calc(50% + 140px);
    }

    .gallery-item-wrapper:has(#img-fold-2-info-box.show) .label-container.show {
        bottom: calc(50% + 130px);
    }

    .gallery-item-wrapper:has(#img-fold-3-info-box.show) .label-container.show {
        bottom: calc(50% + 150px);
    }

    #img-fold-1-info-box {
        min-height: auto;
        padding: 10px 15px;
    }

    #img-fold-1-info-box .info-box-content {
        line-height: 1.4;
    }

    .content-panel.active {
        top: 10%;
        transform: translate(-50%, 0);
        max-height: 85vh;
    }
}

